@@ -10,6 +10,7 @@ Changes relative to tre-0.19:
   * ENSURE-LIST: Do not put NIL into a list.
   * ENSURE-ARRAY: New function to convert lists into arrays.
   * =-ELT has been fixed.
+  * FORMAT supports ~X to print hexadecimals. (Not complete.)
 
 Changes of tre-0.19 relative to tre-0.18:
   * Bug-fix: jump tag optimizer translated any number.
